cabal-version:       >=1.10
name:                hinc
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Alejandro Serrano
maintainer:          trupill@gmail.com
-- copyright:
category:            Language
build-type:          Simple

library
  exposed-modules:     Hinc.Parser
  build-depends:       base >=4.12 && <5, text,
                       megaparsec >= 7,
                       haskell-src-exts >= 1.23 && < 1.24
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hinc
  if impl(ghcjs)
    buildable: False
  main-is:             Main.hs
  build-depends:       base >=4.12 && <5, hinc
  hs-source-dirs:      exe
  default-language:    Haskell2010

executable hincweb
  if !impl(ghcjs)
    buildable: False
  main-is:             Main.hs
  ghcjs-options:       -dedupe
  build-depends:       base >=4.12 && <5, text,
                       megaparsec >= 7,
                       haskell-src-exts >= 1.23 && < 1.24,
                       hinc, miso
  hs-source-dirs:      web
  default-language:    Haskell2010